# Nirman5.0

Chetak/Gateway_Esp/esp_webpage/: esp_webpage.ino
Chetak/PMP/: CMakeLists.txt
Chetak/esp_webpage/: esp_webpage.ino  webpage.html
Chetak/firmware_riscv/: CMakeLists.txt  main.c  make_uf2.py
